--- a/app/src/main/res/layout/fragment_offline.xml
+++ b/app/src/main/res/layout/fragment_offline.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textSize="16dp"
-        android:text="Kalender View"/>
+        android:text="OFFLINE  View"/>
 
     <ImageView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
