--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,7 +5,7 @@
     <color name="counter_text_bg">#FF0000</color>
     <color name="list_background_pressed">#808080</color>
     <color name="list_background">#727272</color>
-    <color name="list_divider">#F000FF</color>
+    <color name="list_divider">#FFFFFF</color>
     <color name="list_item_title">#FFFF0F</color>
     <color name="counter_text_color">#123456</color>
 
