Status icon + hintergrunfarbe halb

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -14,4 +14,8 @@
     <color name="termin">#808080</color>
     <color name="termin_heute">#FF0000</color>
 
+
+    <color name="ticket_list_divider">#ff32ff21</color>
+    <color name="ticket_list">#ff32ff21</color>
+
 </resources>
