--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -2,32 +2,87 @@
 <!-- row_list.xml -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingTop="4dip"
     android:paddingBottom="6dip"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:divider="@color/ticket_list_divider"
 
    >
+    <!--TextView
+    android:id="@+id/BACKGROUD_all"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:text="                             "
+
+    android:textSize="5dp"
+    android:background= "@color/ticket_list" /-->
+    <ImageView
+        android:id="@+id/BACKGROUD_all"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@mipmap/ic_rot"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="false"
+        android:layout_alignParentTop="false" />
 
 
+    <TextView
+        android:id="@+id/BACKGROUD"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="39dp"
+        android:text="                             "
+
+        android:textSize="15dp"
+        android:background="#ffbfbfbf" />
 
     <TextView android:id="@+id/FIRMA_CELL"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="HIER KOMMT DIE FIRMA HIN"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:background="#ff858585" />
 
+
+    <TextView
+        android:id="@+id/MODEL_CELL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="39dp"
+        android:text="HIER KOMMT DAS MODEL"
+        android:textSize="15dp"
+        android:background="#ffbfbfbf"
+        android:layout_marginRight="29dp"
+        android:layout_alignParentLeft="true" />
 
     <TextView
     android:id="@+id/STATUS_CELL"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
+      android:layout_marginTop="39dp"
     android:text="HIER KOMMT DER STATUS"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true"
-        android:textSize="15dp" />
+
+        android:textSize="15dp"
+        android:background="#ffbfbfbf"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="29dp"
+         android:layout_alignParentRight="true"
+
+       />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Status_img"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="8dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="40dp"
+        android:src="@mipmap/ic_status_green"
+        android:maxWidth="18dp"
+        android:maxHeight="18dp"
+        android:adjustViewBounds="true"
+        android:background="#ffbfbfbf" />
 
     <TextView
         android:id="@+id/ADRESSE_CELL"
@@ -37,18 +92,22 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="22dp"
         android:text="HIER DIE ADDRESSE"
         android:textSize="15dp" />
 
 
-    <TextView android:id="@+id/MODEL_CELL"
+    <TextView
+        android:id="@+id/ORT_CELL"
         android:layout_width="wrap_content"
-
-        android:text="HIER KOMMT DAS MODEL HIN"
-        android:layout_marginTop="39dp"
         android:layout_height="wrap_content"
-        android:textSize="15dp" />
+
+        android:layout_marginTop="22dp"
+        android:text="HIER der ORT"
+        android:textSize="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="8dp"
+        android:layout_alignParentRight="true" />
 
 
     <TextView
@@ -62,7 +121,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="55dp"/>
-
 
 
 
