--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -2,13 +2,12 @@
 <!-- row_list.xml -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingBottom="6dip"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:divider="@color/ticket_list_divider"
 
-   >
+    >
     <!--TextView
     android:id="@+id/BACKGROUD_all"
     android:layout_width="fill_parent"
@@ -19,12 +18,16 @@
     android:background= "@color/ticket_list" /-->
     <ImageView
         android:id="@+id/BACKGROUD_all"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:src="@mipmap/ic_rot"
+        android:layout_width="match_parent"
+
+        android:src="@drawable/rot"
         android:scaleType="centerCrop"
-        android:adjustViewBounds="false"
-        android:layout_alignParentTop="false" />
+
+
+        android:layout_alignParentBottom="false"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="false"
+        android:layout_alignBottom="@+id/FEHLER_CELL" />
 
 
     <TextView
@@ -42,7 +45,7 @@
         android:layout_height="wrap_content"
         android:text="HIER KOMMT DIE FIRMA HIN"
         android:textSize="20dp"
-        android:background="#ff858585" />
+        android:background="#ff9f9f9f" />
 
 
     <TextView
