--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_marginTop="5dip"
+        android:layout_marginTop="0dip"
         android:scrollbarStyle="outsideInset"
         android:fillViewport="true">
 
@@ -16,7 +16,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context="de.hoell.jobcontrol.ticketlist.DetailsFragment"
-    android:id="@+id/DetailsTabelle">
+    android:id="@+id/DetailsTabelle"
+        android:layout_marginTop="0dip">
     <TableRow android:id="@+id/Status"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -31,6 +32,28 @@
              android:textAlignment="center"
              android:layout_span="4"
              android:layout_weight="1" />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_save"
+            android:id="@+id/button_save" />
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_maps"
+            android:text="@string/button_map" />
+
+
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_his"
+            android:id="@+id/button_his"
+            android:visibility="gone" />
     </TableRow>
     <TableRow android:id="@+id/Firma"
         android:layout_width="match_parent"
@@ -247,9 +270,6 @@
                 android:text="@string/test_text"
                 android:id="@+id/textViewContentTelefonnummer"
 
-                android:clickable="true"
-                android:enabled="false"
-                android:autoLink="phone"
                 android:layout_column="0"
                 android:textColor="#383838" />
         </TableRow>
@@ -413,28 +433,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
 
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/button_maps"
-                    android:text="@string/button_map" />
-
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/button_save"
-                    android:id="@+id/button_save"
-                    />
-
-                <Button
-                    style="?android:attr/buttonStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/button_his"
-                    android:id="@+id/button_his"
-                    android:visibility="gone" />
             </LinearLayout>
 
         </TableRow>
