--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -47,13 +47,7 @@
 
 
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_his"
-            android:id="@+id/button_his"
-            android:visibility="gone" />
+
     </TableRow>
     <TableRow android:id="@+id/Firma"
         android:layout_width="match_parent"
@@ -432,7 +426,13 @@
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_his"
+                    android:id="@+id/button_his"
+                    /><!--android:visibility="gone"-->
             </LinearLayout>
 
         </TableRow>
