--- a/app/src/main/res/layout/row_his.xml
+++ b/app/src/main/res/layout/row_his.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- row_his.xml -->
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingTop="4dip"
     android:paddingBottom="6dip"
@@ -8,15 +8,81 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView android:id="@+id/AUANR_CELL"
-        android:layout_width="50dip"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"></LinearLayout>
 
-    <TextView android:id="@+id/POS_CELL"
-        android:layout_width="70dip"
-        android:layout_height="wrap_content" android:layout_weight="1"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <TextView android:id="@+id/TXT_CELL"
-        android:layout_width="60dip"
-        android:layout_height="wrap_content"  android:layout_weight="1"/>
-</LinearLayout>
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0">
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" >
+
+                <TextView
+                    android:id="@+id/DATUM_CELL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ff003d91"
+                    android:text="DATUM"
+                    android:singleLine="true"
+                    android:padding="3dp" />
+
+                <TextView
+                    android:id="@+id/TECHNR_CELL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ff003d91"
+                    android:text="TECH"
+                    android:layout_weight="1"
+                    android:padding="3dp" />
+
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" >
+
+                <TextView
+                    android:id="@+id/Z1_CELL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ff003d91"
+                    android:text="Z1"
+                    android:singleLine="true"
+                    android:padding="3dp" />
+
+                <TextView
+                    android:id="@+id/Z2_CELL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ff003d91"
+                    android:text="Z2"
+                    android:layout_weight="1"
+                    android:padding="3dp" />
+            </TableRow>
+
+        </TableLayout>
+
+        <TextView
+            android:id="@+id/TXT_CELL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#ff003d91"
+            android:text="TEXT1234"
+            android:paddingLeft="5dp"
+            android:layout_gravity="left" />
+
+    </LinearLayout>
+
+</RelativeLayout>
