--- a/app/src/main/res/layout/activity_historie.xml
+++ b/app/src/main/res/layout/activity_historie.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:paddingRight="8dp"
+    android:baselineAligned="false">
 
     <ListView android:id="@android:id/list"
         android:layout_width="match_parent"
@@ -12,4 +13,11 @@
 
         android:layout_weight="1"
         android:drawSelectorOnTop="false"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_next"
+        android:id="@+id/button_next" />
+
 </LinearLayout>
