--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -7,6 +7,15 @@
     android:paddingRight="8dp"
     android:baselineAligned="false">
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:text="Neue Info"
+        android:id="@+id/button_newinfo"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1" />
+
     <ListView android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,10 +23,5 @@
         android:layout_weight="1"
         android:drawSelectorOnTop="false"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_next"
-        android:id="@+id/button_next" />
 
 </LinearLayout>
