--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -433,6 +433,20 @@
                     android:text="@string/button_his"
                     android:id="@+id/button_his"
                     /><!--android:visibility="gone"-->
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/rueckmeldung"
+                    android:id="@+id/button_rueck"
+                    />
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/info"
+                    android:id="@+id/button_info" />
             </LinearLayout>
 
         </TableRow>
