--- a/app/src/main/res/layout/fragment_srnsuche.xml
+++ b/app/src/main/res/layout/fragment_srnsuche.xml
@@ -31,5 +31,13 @@
         android:id="@+id/button_suchen"
         android:layout_gravity="center_horizontal" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="QR-Scan"
+        android:id="@+id/button_scan"
+        android:layout_gravity="center_horizontal" />
+
 
 </LinearLayout>
