--- a/app/src/main/res/layout/activity_ticket_details.xml
+++ b/app/src/main/res/layout/activity_ticket_details.xml
@@ -14,4 +14,12 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         tools:layout="@layout/fragment_details" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/popup"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="128dp" />
 </RelativeLayout>
