--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -385,7 +385,33 @@
         </TableRow>
 
 
+        <TableRow
+            android:id="@+id/fleet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/fleet"
+                android:id="@+id/textViewFleet"
+                android:textStyle="normal|bold" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/test_text"
+                android:id="@+id/textViewContentFleet"
+                android:clickable="true"
+                android:enabled="false"
+                android:layout_column="0"
+                android:textColor="#383838" />
+        </TableRow>
 
         <TableRow
         android:id="@+id/Annahme"
