--- a/app/src/main/res/menu/menu_ticket_details.xml
+++ b/app/src/main/res/menu/menu_ticket_details.xml
@@ -3,4 +3,6 @@
     tools:context="de.hoell.jobcontrol.ticketlist.TicketDetailsActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/action_verschieben" android:title="Ticket verschieben"/>
+
 </menu>
