Tickets werden aktualliesiert und bei neuem tiicket benachrichtigung fixed #11 & fixed #14

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -17,5 +17,8 @@
         android:icon="@drawable/ic_action_info"
         android:orderInCategory="100"
         android:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_zeit"
+        android:title="Update Intervall"/>
 </menu>
 
