fixed #16 und sonderöffnungszeiten

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,11 @@
             android:text="@string/switch_verfuegbar_text"
             android:id="@+id/switch_verfuegbar"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="3dp" />
+            android:layout_marginTop="3dp"
+            android:checked="true"
+            android:textOff="NEIN"
+            android:textOn="JA"/>
 
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/scrollView3" >
 
             <ListView
                 android:id="@+id/techniker_list"
@@ -54,9 +53,8 @@
                 android:divider="@color/list_divider"
                 android:dividerHeight="1dp"
                 android:listSelector="@drawable/list_selector"
-                android:background="@color/list_background"
-                android:entries="@array/status_array" />
-        </ScrollView>
+                android:background="@color/list_background" />
+
 
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
