--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -328,6 +328,34 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/Oeffnung"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/oeffnung"
+                android:id="@+id/textView11"
+                android:textStyle="normal|bold" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/test_text"
+                android:id="@+id/textViewContentOeffnung"
+                android:clickable="true"
+                android:enabled="false"
+                android:layout_column="0"
+                android:textColor="#ffff0000" />
+        </TableRow>
+
+        <TableRow
             android:id="@+id/Auftragsnr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
