--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,19 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:jobcontrol="http://schemas.android.com/apk/res-auto"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item android:id="@+id/action_refresh"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/action_refresh"
-        jobcontrol:showAsAction="ifRoom"
+        android:showAsAction="ifRoom"
         />
 
 
     <item android:id="@+id/action_logout"
         android:icon="@drawable/ic_action_logout"
         android:title="@string/action_logout"
-        jobcontrol:showAsAction="ifRoom"
+        android:showAsAction="ifRoom"
 
         />
 
@@ -21,7 +21,7 @@
         android:title="@string/action_info"
         android:icon="@drawable/ic_action_info"
         android:orderInCategory="100"
-        jobcontrol:showAsAction="ifRoom"
+        android:showAsAction="ifRoom"
         />
 
     <item android:id="@+id/action_zeit"
