- App jetzt nur noch ab Android 5.0 (API 21) - Einige änderungen im internen - greift nun auf die neue Externe ip zu

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,9 @@
     <!--style name="NotificationContent" parent="@android:style/TextAppearance.Small">
         <item name="android:textColor">?android:attr/textColorPrimaryInverse</item>
     </style-->
+    <style name="Notification" parent="android:Theme.Holo">
+        <!-- Customize your theme here. -->
+    </style>
+
 
 </resources>
