--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -21,7 +21,8 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:background="#000000">
 
     <LinearLayout
         android:orientation="horizontal"
