- Widget ALPHA integriert  (zeigt Tickets an updatet leider noch nicht) - Kundenanforderungs Bögen werden nun besser angezeigt und es ist möglich mehrere an ein Ticket zu hängen

--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:divider="@color/ticket_list_divider"
 
-    >
+    android:id="@+id/list_row">
     <!--TextView
     android:id="@+id/BACKGROUD_all"
     android:layout_width="fill_parent"
