Bogen Download geht mit hänger  und seiten anzahl implementiert

--- a/app/src/main/res/layout/activity_eskalation.xml
+++ b/app/src/main/res/layout/activity_eskalation.xml
@@ -139,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/eskalation_caps"
-                android:id="@+id/Rueckmeldung"
+                android:id="@+id/Eskalation"
                 android:layout_gravity="center_horizontal" />
 
             <TableLayout
