--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -19,4 +19,6 @@
     <color name="ticket_list_divider">#ff003d91</color>
     <color name="ticket_list">#ff32ff21</color>
 
+    <color name="hoell_blau">#ff003d91</color>
+
 </resources>
