--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,6 +4,13 @@
     android:orientation="vertical" >
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/textViewSeitenAnz"
+        android:layout_gravity="top|center_horizontal"
+        android:visibility="gone" />
 
     <com.ortiz.touch.TouchImageView
     android:id="@+id/img"
