--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -22,14 +22,15 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:hint="@string/login_name"
         android:ems="10"
         android:id="@+id/login_name"
         android:layout_marginTop="27dp"
         android:layout_below="@+id/login_text"
         android:layout_alignRight="@+id/login_text"
-        android:layout_alignEnd="@+id/login_text" />
+        android:layout_alignEnd="@+id/login_text"
+        />
 
     <EditText
         android:layout_width="wrap_content"
