--- a/app/src/main/res/layout/fragment_eteile.xml
+++ b/app/src/main/res/layout/fragment_eteile.xml
@@ -7,113 +7,119 @@
     android:layout_gravity="bottom"
     android:orientation="vertical" >
 
-<LinearLayout
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Verbrauchte Teile"
-        android:id="@+id/eTeileUeberschrift"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="101dp">
-
-        <NumberPicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/numberPickerAnzahl"
-
-            >
-
-        </NumberPicker>
+        android:id="@+id/scrollView3" >
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="11dp">
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-            <LinearLayout
-                android:orientation="horizontal"
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Verbrauchte Teile"
+            android:id="@+id/eTeileUeberschrift"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="101dp">
+
+            <NumberPicker
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/numberPickerAnzahl"
 
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp">
+                >
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="TeileNr."
-                    android:id="@+id/textView14"
-                    android:layout_gravity="center_vertical" />
-
-                <EditText
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editTextTeileNr"
-
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="20dp" />
-
-            </LinearLayout>
+            </NumberPicker>
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp">
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="11dp">
 
-                <TextView
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Bezeichnung"
-                    android:id="@+id/textView19"
-                    android:layout_gravity="center_vertical" />
 
-                <EditText
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editTextBezeichnung"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="20dp" />
+                    android:layout_marginTop="30dp">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="TeileNr."
+                        android:id="@+id/textView14"
+                        android:layout_gravity="center_vertical" />
+
+                    <EditText
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editTextTeileNr"
+
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="20dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Bezeichnung"
+                        android:id="@+id/textView19"
+                        android:layout_gravity="center_vertical" />
+
+                    <EditText
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editTextBezeichnung"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="20dp" />
+
+                </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Barcode-Scan"
+            android:id="@+id/button_bscan"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp" />
+
+
+
+
+
+
+
+
     </LinearLayout>
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Barcode-Scan"
-        android:id="@+id/button_bscan"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
-
-
-
-
-
-
-
-
-</LinearLayout>
+    </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add"
@@ -134,4 +140,5 @@
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"
         android:layout_gravity="bottom|end"/>
+
 </FrameLayout>
