--- a/app/src/main/res/layout/fragment_eteile.xml
+++ b/app/src/main/res/layout/fragment_eteile.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         >
 
 
@@ -27,12 +27,37 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp" />
 
-        <LinearLayout
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Kleinteile/Reinigungsmateriel"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="7dp"
+                    android:id="@+id/checkBoxKleinteile"
+                    android:visibility="invisible" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Entsorgung"
+                    android:id="@+id/checkBoxEntsorgung"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="7dp"
+                    android:visibility="invisible" />
+            </LinearLayout>
+
+            <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="101dp">
+            android:layout_marginTop="66dp">
 
             <NumberPicker
                 android:layout_width="wrap_content"
