--- a/app/src/main/res/layout/fragment_pruefen.xml
+++ b/app/src/main/res/layout/fragment_pruefen.xml
@@ -353,6 +353,35 @@
                 </LinearLayout>
             </TableRow>
 
+            <TableRow
+                android:id="@+id/tableRow6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bemerkung"
+                    android:id="@+id/textView35"
+                    android:textStyle="normal|bold"
+                    android:layout_column="0" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <EditText
+                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editTextBemerkung"
+                    android:textStyle="normal"
+                    android:layout_column="0"
+                    android:background="@android:color/transparent" />
+            </TableRow>
+
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab_next"
                 android:layout_width="wrap_content"
